--- a/style/index.css
+++ b/style/index.css
@@ -37,7 +37,7 @@ blockquote, q {
 *{
     box-sizing:border-box;
     max-width:100%;
-    /* border:1px solid grey; */
+    border:1px solid green;
 }    
 /*General Styles*/
 html{
@@ -47,7 +47,12 @@ body{
     font-size:1.6rem;
     line-height:1.5;
     font-family: 'Rokkitt', serif;
+	background-color: #F5F5F5;
 }
+header {
+	background-color: #4682B4;
+}
+
 h1{
     font-family: 'Ubuntu', sans-serif;
     font-size:5.5rem;
@@ -55,10 +60,49 @@ h1{
 }
 section{
     padding:4% 0;
+}
 
     /* Header Section Styles */
 
-.header-nav {
-	display:flex;
-	text-align: center;
+nav {
+	display: flex;
+	justify-content: center;
 }
+
+button {
+	height: 5%;
+	width: 10%;
+	display:inline-block;
+	color:black;
+    padding:15px 32px;
+    text-align:center;
+	font-size: 1.6rem;
+	}
+
+.section-one {
+
+}
+
+.section-two {
+	background-image: ;
+}
+
+
+
+
+
+
+
+
+
+/* About.html styling */
+
+
+/* Contact.html styling */
+.contact-page h2 {
+	font-size: 30px;
+}
+
+
+
+/* Projects.html styling */
