--- a/style/index.css
+++ b/style/index.css
@@ -77,15 +77,26 @@ button {
     padding:15px 32px;
     text-align:center;
 	font-size: 1.6rem;
-	}
+}
 
 .section-one {
 
 }
 
 .section-two {
-	background-image: ;
+	background-image: url(https://images.unsplash.com/photo-1462332420958-a05d1e002413?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=3140&q=80);
+	height: 50vh;
+	background-repeat: no-repeat;
+	background-position: bottom;
+	background-size: cover;
 }
+
+.section-three-images {
+	display: flex;
+	width: 100%;
+	height: 60vh;
+}
+
 
 
 
