--- a/style/index.css
+++ b/style/index.css
@@ -67,15 +67,17 @@ nav {
 	display: flex;
 	justify-content: center;
 }
-button {
+a {
 	height: 5%;
 	width: 10%;
 	display:inline-block;
 	color:black;
-    padding:15px 32px;
+    padding:2 5;
     text-align:center;
 	font-size: 1.6rem;
 	background-color: grey;
+	border: 1px solid black;
+	margin-bottom: 1%;
 }
 
 /* Section One Stylings */
@@ -134,8 +136,14 @@ img {
 /* About.html styling */
 
 /* Contact.html styling */
+
 .contact-page h2 {
 	font-size: 30px;
+}
+
+.container-contact {
+	display:flex;
+	justify-content: center;
 }
 
 /* Projects.html styling */
