--- a/style/index.css
+++ b/style/index.css
@@ -34,30 +34,49 @@ blockquote:before, blockquote:after, q:before, q:after {
 blockquote, q {
 	quotes: "" "";
 	}
-*{
+* {
     box-sizing:border-box;
     max-width:100%;
     /* border:1px solid green; */
+	border: 1px solid green;
 }    
 /*General Styles*/
 html{
     font-size:62.5%;
 }
 body{
-    font-size:2.0rem;
+    font-size:1.6rem;
     line-height:1.5;
     font-family: 'Rokkitt', serif;
 	background-color: #F5F5F5;
+	color: rgb(59, 55, 55);
+	
 }
-header {
-	background-color: #4682B4;
-}
-h1{
+
+h1, h2, h3 {
     font-family: 'Ubuntu', sans-serif;
-    font-size:5.5rem;
-	text-align: center;
+    text-align: center;
+	color: black;
 }
-section{
+
+h1 {
+	font-size:6rem;
+}
+
+h2 {
+	font-size: 4rem;
+}
+
+h3 {
+	font-size: 2rem;
+}
+
+a {
+	text-decoration: none;
+	color: black;
+}
+
+section {
     padding:4% 0;
 }
 
@@ -65,50 +84,63 @@ section{
 
 nav {
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
+	background-color: #4682B4;
+	z-index: 999;
+	position: fixed;
+	width: 100%;
 }
-a {
-	height: 5%;
-	width: 10%;
-	display:inline-block;
-	color:black;
-    padding:2 5;
+
+.links {
+	width: 50%;
+	display:flex;
+	justify-content: center;
+	align-items: center;
     text-align:center;
-	font-size: 1.6rem;
-	background-color: grey;
+	margin: 0 auto;
+}
+
+.links a {
 	border: 1px solid black;
-	margin-bottom: 1%;
-	text-decoration: none;
+	background-color: grey;
+	padding: 0 5%;
+	margin: 2% 0;
 }
 
 /* Section One Stylings */
 
-h2	{
-		font-family: 'Ubuntu', sans-serif;
-		font-size:4.5rem;
+.intro-text {
+	width: 100%%;
+	text-align: center;
+	margin: 6% auto 0;
+}
+
+.intro-text h2	{
 		text-align: center;
-		text-decoration: none;
 	}
+
 .section-one p {
-		font-size: 4rem;
-		text-decoration: none;
 		text-align: center;
+		margin: 0 25%;
 }
 
 /* Section Two Stylings */
-.section-two {
+.bk-img {
 	background-image: url(https://images.unsplash.com/photo-1462332420958-a05d1e002413?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=3140&q=80);
 	height: 50vh;
 	background-repeat: no-repeat;
-	background-position: bottom;
+	background-position: center;
 	background-size: cover;
+	margin: 0 auto;
 }
 
 /* Section Three Stylings */
+
 img {
 	width: auto;
 	height: 62vh;
-	margin: 0 5px;
+	margin: 0 1%;
 }
 
 .section-three-images {
@@ -118,34 +150,103 @@ img {
 	object-fit: cover;
 }
 
-.section-three p {
+.section-three-text {
 	text-align: center;
-	padding: 30% 20%;
+	padding: 50% 10%;
 	line-height: .8;
-}
+	width:70%;
+ }
 
 /* Footer Stylings */
 
-.footer {
-	background-color:#4682B4
+footer {
+	background-color:#4682B4;
 }
 
-.footer-button {
-	margin: 25px;
+footer nav {
+	width: 100%;
+	padding: 50% 0;
 }
 
+/* footer a {
+	border: 1px solid black;
+	background-color: grey;
+	padding: 0 5%;
+	margin: 2% 0;
+} */
 
-/* About.html styling */
 
 /* Contact.html styling */
 
-.contact-page h2 {
+/* .contact-page h2 {
 	font-size: 30px;
 }
 
 .container-contact {
 	display:flex;
 	justify-content: center;
-}
+} */
 
-/* Projects.html styling */
+
+/* Responsive Styling  */
+/* tablet */
+
+
+
+/* phone */
+@media(max-width:500px) {
+	
+	nav {
+		background-color: #F5F5F5;
+		position: relative;
+	}
+
+	.links {
+		display: flex;
+		flex-direction: column;
+		align-content: center;
+		align-items: center;
+		width: 100%;
+		/* margin: 0 auto; */
+	}
+
+	.links a {
+		display: flex;
+		align-content: center;
+		justify-content: center;
+		margin: 0 auto;
+		width: 30%;
+		text-align: center;
+	}
+
+	.bk-img {
+		height: 50vh;
+		background-repeat: no-repeat;
+		background-position: center;
+		background-size: cover;
+		margin: 0 3%;
+	}
+
+	.section-three-images {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+		margin: 3% 0;
+		/* align-items: center;
+		justify-content: center;
+		max-width: 22%; */
+		height: 20vh;
+		object-fit: cover;
+	}
+	
+	.section-three-text {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		text-align: center;
+		margin: 10% 10%;
+		padding: 50% 10%;
+		line-height: .8;
+		width:100%;
+	 }
+}
