--- a/style/index.css
+++ b/style/index.css
@@ -37,7 +37,6 @@ blockquote, q {
 * {
     box-sizing:border-box;
     max-width:100%;
-    /* border:1px solid green; */
 	border: 1px solid green;
 }    
 /*General Styles*/
@@ -186,46 +185,45 @@ nav {
   
   .projects-text {
 	display: flex;
-	align-text: center;
 	justify-content: center;
 	align-items: center;
 	align-content: center;
   }
 
-
-
-/*
-img {
-	width: auto;
-	height: 62vh;
-	margin: 0 1%;
-}
-
-.section-three-images {
-	display: flex;
-	max-width: 22%;
-	height: 60vh;
-	object-fit: cover;
-}
-
-.section-three-text {
-	text-align: center;
-	padding: 50% 10%;
-	line-height: .8;
-	width:70%;
- }
- */
-
 /* Footer Stylings */
 
-footer {
-	background-color:#4682B4;
+.footer-button {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	background-color: #4682B4;
+	padding: 3%; 
+   }
+   
+.footer-button a {
+	 width: 10%;
+	 margin: 0 auto;
+	 padding: 1% 1%;
+	 border: 1px solid black;
+	 background-color: grey;
+	 color: black;
+	 text-decoration: none;
+	 text-align: center
 }
 
-footer nav {
+/* footer {
+	background-color:#4682B4;
+	display: flex;
+	justify-content: center;
 	width: 100%;
-	padding: 50% 0;
 }
+
+.footer-button {
+	width: 20%;
+	margin: 10% 10%;
+	border: 1px solid black;
+	background-color: grey;
+} */
 
 /* footer a {
 	border: 1px solid black;
@@ -281,21 +279,14 @@ footer nav {
 
 	.container div {
 		width: 40%;
-		/* align-content: center;
-		align-items: center; */
 		margin: 1% 1%;
 	} 
-
-
 
 	.section-three-images {
 		display: flex;
 		flex-wrap: wrap;
 		width: 100%;
 		margin: 3% 0;
-		/* align-items: center;
-		justify-content: center;
-		max-width: 22%; */
 		height: 20vh;
 		object-fit: cover;
 	}
