--- a/style/index.css
+++ b/style/index.css
@@ -81,7 +81,7 @@ section {
 
 /* Header Section Styles */
 
-nav {
+.header-nav {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -131,14 +131,16 @@ nav {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	margin: 0 auto;
+	/* margin: 0 0;
+	padding: 0 0; */
 }
 
 /* Section Three Stylings */
 
 .container { 
 	display: flex;
-	padding: 1% 0;
+	/* padding: 0 0;
+	margin: 0 0; */
   }
   
   .container div {
@@ -192,23 +194,32 @@ nav {
 
 /* Footer Stylings */
 
-.footer-button {
-	width: 100%;
+footer {
+	background-color: #4682B4;
 	display: flex;
 	justify-content: center;
-	background-color: #4682B4;
-	padding: 3%; 
+	padding: 3% 3%;
+	/* margin: 0 auto; */
+	/* position: absolute;
+	/* width: 100%; */
+}
+
+.footer-button {
+	display: flex;
+	justify-content: center;
+	padding: 3% 0%; 
+	/* margin: 5% 2%; */
    }
    
 .footer-button a {
-	 width: 10%;
+	 width: 100%;
 	 margin: 0 auto;
-	 padding: 1% 1%;
+	 padding: 1% 15%;
 	 border: 1px solid black;
 	 background-color: grey;
-	 color: black;
-	 text-decoration: none;
-	 text-align: center
+	 text-align: center;
+	 display: flex;
+	 justify-content: center;
 }
 
 /* footer {
@@ -240,7 +251,7 @@ nav {
 /* phone */
 @media(max-width:500px) {
 	
-	nav {
+	.header-nav {
 		background-color: #F5F5F5;
 		position: relative;
 	}
@@ -301,4 +312,4 @@ nav {
 		line-height: .8;
 		width:100%;
 	 }
-}
+} 
