--- a/style/index.css
+++ b/style/index.css
@@ -37,7 +37,7 @@ blockquote, q {
 * {
     box-sizing:border-box;
     max-width:100%;
-	border: 1px solid green;
+	/* border: 1px solid green; */
 }    
 /*General Styles*/
 html{
